fix carousel overlapping

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800|Roboto+Slab:400,100,300,700);
 // @import "variables";
 @import "normalize";
 // @import "mixins";
@@ -11,6 +12,18 @@
 
 body{
 	padding-top: 50px;
+	font-family: "Roboto Slab", sans-serif;
+	font-weight: 300; 
+	font-size: 2em;
+	position: relative; 
+}
+h1, h2, h3, h4, h5, h6{
+	font-family: "Open Sans", sans-serif;
+	font-weight: 100;
+	margin: 0;  
+}
+img{
+	max-width: 200px;
 }
 .navbar {
 	-webkit-border-radius: 0; 
@@ -19,4 +32,7 @@ body{
 }
 footer .navbar-default {
 	background: transparent; 
+}
+.page {
+	padding: 50px, 0; 
 }
